@@ -1,3 +1,7 @@
+30 Jul 2019
+* Remove vulnerability in PHP iDIN Library
+
+---------------------------------------------------------------------------------------------------------------------------------------------
 15 July 2019
 * Fix "The SamlResponse contains the name of the issuer which gives the response and is no longer exposed as “Acquirer” but as Issuer"
 * InclusiveNamespaces is not taken into account when validating iDIN signature
